# PyQt-SiliconUI

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  run_Silicon_Gallery.bat  setup.py  start.py  test.py  ui.py
SiliconUI/: SiAnimationObject.py  SiButton.py  SiComboBox.py  SiFont.py  SiFrame.py  SiGlobal.py  SiHint.py  SiInfo.py  SiInputBox.py  SiLabel.py  SiLayout.py  SiMenu.py  SiOption.py  SiOverlay.py  SiProgressBar.py  SiScrollArea.py  SiScrollFrame.py  SiSliderBar.py  SiStack.py  SiSticker.py  SiStyle.py  SiSwitch.py  SiTab.py  SiTabArea.py  SiTable.py  __init__.py
components/: ExperimentField.py  Glaze.py  Homepage.py  Options.py  Widgets.py  __init__.py  sub_example_A.py  sub_example_B.py
components/experifield/: music_info_placeholder.py
docs/: README_zh.md  coding_standard.md
docs/template/: layer.md
examples/Gallery/: start.py  ui.py
examples/Gallery for siui/: start.py  test_new_button.py  ui.py
examples/My-TODOs/: start.py  ui.py
examples/TODO list/: options.ini  settings_parser.py  start.py  todos_parser.py  ui.py
examples/button/: demo_button.py
examples/template_test/: start.py  ui.py
icons/: __init__.py  parser.py
silicon/: SiAnimationObject.py  SiButton.py  SiComboBox.py  SiFont.py  SiFrame.py  SiGlobal.py  SiHint.py  SiHomePage.py  SiInfo.py  SiInputBox.py  SiLabel.py  SiLayout.py  SiMenu.py  SiOption.py  SiOverlay.py  SiScrollArea.py  SiSliderBar.py  SiStack.py  SiStackArea.py  SiStackOption.py  SiSticker.py  SiSwitch.py  SiTab.py  SiTabArea.py  __init__.py
siui/: __init__.py  typing.py
siui/components/: __init__.py  button.py  button_flattened.py  chart.py  combobox_.py  container.py  editbox.py  graphic.py  label.py  layout.py  menu_.py  option_card.py  popover.py  progress_bar.py  progress_bar_.py  slider.py  slider_.py
siui/core/: __init__.py  alignment.py  animation.py  color.py  effect.py  enumrates.py  event_filter.py  globals.py  (+2 more)
test/: test.py
(+183 files in other folders)
