[project]
name = "PyQt-SiliconUI"
version = "1.0.1"
authors = [
    { name = "ChinaIceF", email = "ChinaIceF@outlook.com" },
    { name = "rainzee wang", email = "rainzee.w@gmail.com" },
]
description = "A powerful and artistic UI library based on PyQt5 / PySide6"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = ["PyQt5>=5.15.10", "typing-extensions>=4.12.2", "python-dateutil>=2.9.0"]

[project.urls]
Repository = "https://github.com/ChinaIceF/PyQt-SiliconUI"

[tool.pdm.dev-dependencies]
stub = ["pyqt5-stubs>=5.15.6.0"]
lint = ["ruff>=0.5.0"]
build = ["nuitka>=2.3.10"]
profile = ["viztracer>=0.16.3"]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["I", "E", "W", "F", "C", "Q", "PT", "UP", "PYI", "T20"]

[tool.pyright]
pythonVersion = "3.8"
pythonPlatform = "All"
typeCheckingMode = "standard"
